--- a/src/app/views/new-page/new-page.component.html
+++ b/src/app/views/new-page/new-page.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="card mx-auto">
         <div class="pt-2 card-header w-100">
-            <h3>Create new featured content</h3>
+            <h3 class="mt-3">Create new featured content</h3>
         </div>
         <div class="card-body py-3">
             <form [formGroup]="contentForm" (ngSubmit)="saveNewFeaturedContent()">
