--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -28,7 +28,7 @@
               <input type="email" class="form-control" placeholder="" formControlName="email">
               <!-- <small class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
-            <div class="form-group">
+            <div *ngIf="isSeller" class="form-group">
               <label>Code</label>
               <input class="form-control" type="text" formControlName="code">
             </div>
@@ -38,7 +38,7 @@
               <label>Re-enter password</label>
               <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
             </div>
-            <div class="form-group">
+            <div *ngIf="isSeller" class="form-group">
               <label>Upline/Referrer Code</label>
               <input class="form-control" formControlName="referrerCode">
             </div>
