--- a/src/app/views/request-voucher/request-voucher.component.html
+++ b/src/app/views/request-voucher/request-voucher.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-group">
                     <label for="amount">Amount</label>
-                    <input class="form-control" id="amount" formControlName="amount">
+                    <input currencyMask [options]="{ prefix: '₱ ', thousands: ',', decimal: '.' , align: 'left', allowNegative : 'false' }" class="form-control" id="amount" formControlName="amount">
                 </div>
             </div>
         </div>
