--- a/src/app/views/sellers/sellers.component.html
+++ b/src/app/views/sellers/sellers.component.html
@@ -1,44 +1,36 @@
 <div class="animated fadeIn">
-  <div class="my-1">
-      <ngu-carousel #myCarousel [inputs]="carouselTileConfig" [dataSource]="carouselTileItems$ | async">
-          <ngu-tile *nguCarouselDef="let item; let i = index; let ani = animate"> <!-- [@slider]="ani" PLease this animation to this tile to see animation. stackblitz have error with animations -->
-            <div class="tile">
-              <img style="width:100%;height:180px;" [src]="item.photoUrl" alt=""/>
-            </div>
-            <div class="tile p-2 pb-0">
-              <p class="product-style">{{item.name}}</p>
-              <p class="lead text-purse mb-0">{{item.price  | currency:'PHP':'symbol-narrow':'0.2-2'}}</p>
-            </div>
-          </ngu-tile>
-        
-          <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
-          <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
-        
-          <!-- <ul class="myPoint" NguCarouselPoint>
-            <li *ngFor="let i of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
-          </ul> -->
-      </ngu-carousel>
+  <div class="form-group has-search">
+    <span class="fa fa-search form-control-feedback"></span>
+    <input type="text" class="form-control" placeholder="Search Seller" [(ngModel)]="searchSeller"/>
   </div>
-
   <div class="my-1">
-      <ngu-carousel #myCarousel [inputs]="carouselTileConfig" [dataSource]="carouselTileItems2$ | async">
-          <ngu-tile *nguCarouselDef="let item; let i = index; let ani = animate"> <!-- [@slider]="ani" PLease this animation to this tile to see animation. stackblitz have error with animations -->
-            <div class="tile">
-              <img style="width:100%;height:180px;" [src]="item.photoUrl" alt=""/>
+      <div class="row">
+          <div class="col-sm-4 column p-3" *ngFor="let seller of sellers | filterSeller: searchSeller ;let i =index;">
+              <div class="card">
+                  <div class="card-img-top card-img-top-250 one">
+                      <img style="width:100%;height:200px;" routerLink="/my-cart" class="img-fluid" [src]="seller.photoUrl" alt="image">
+                  </div>
+                  <div class="card-body">
+                      <h5 class="card-title">{{seller.name}}</h5>
+                      <p class="card-text"><small class="text-muted">{{seller?.description}}</small></p>
+                  </div>
+                  <div class="card-block p-3">
+                    <button type="button" class="btn  btn-primary col-sm-12" (click)="openUrl(seller.url)">
+                      Go to Page
+                    </button>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <!-- <div class="card-deck">
+          <div class="card" *ngFor="let seller of sellers">
+            <img [src]="seller.photoUrl" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
-            <div class="tile p-2 pb-0">
-              <p class="product-style">{{item.name}}</p>
-              <p class="lead text-purse mb-0">{{item.price  | currency:'PHP':'symbol-narrow':'0.2-2'}}</p>
-            </div>
-          </ngu-tile>
-        
-          <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
-          <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
-        
-          <!-- <ul class="myPoint" NguCarouselPoint>
-            <li *ngFor="let i of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
-          </ul> -->
-      </ngu-carousel>
+          </div>
+        </div> -->
   </div>
-    
 </div>
