--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-5">
       <div class="card card-signin mt-4 mb-3">
         <div class="card-body">
-          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="register(registerFormGroup.value)"
+          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="registerV2(registerFormGroup.value)"
             novalidate>
             <div class="p-15 text-center mb-4">
               <img width="60%" alt="Angular Logo" src="assets/images/Purse Diversified Logo - 01.jpg">
