--- a/src/app/views/account-settings/account-settings.component.html
+++ b/src/app/views/account-settings/account-settings.component.html
@@ -131,14 +131,14 @@
               </div>
               <div class="form-group">
                   <label>Middle Name</label>
-                  <input type="text" class="form-control form-control-sm" placeholder="" formControlName="middleName">
+                  <input type="text" class="form-control form-control-sm" placeholder="" formControlName="middleName" blockSpecialChar>
                   <small class="text-danger font-weight-bold ml-1" *ngIf="(registerCompleteFormGroup.get('middleName').invalid && registerCompleteFormGroup.get('middleName').dirty)">
                       Enter your middle name
                   </small>
               </div>
               <div class="form-group">
                 <label>Last Name</label>
-                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="lastName">
+                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="lastName" blockSpecialChar>
                 <small class="text-danger font-weight-bold ml-1" *ngIf="(registerCompleteFormGroup.get('lastName').invalid && registerCompleteFormGroup.get('lastName').dirty)">
                     Enter your last name
                 </small>
@@ -160,7 +160,7 @@
               <br/>
               <div class="form-group">
                 <label>Place of Birth</label>
-                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="placeOfBirth">
+                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="placeOfBirth" blockSpecialChar>
                 <small class="text-danger font-weight-bold ml-1" *ngIf="(registerCompleteFormGroup.get('placeOfBirth').invalid && registerCompleteFormGroup.get('placeOfBirth').dirty)">
                     Enter place of birth
                 </small>
@@ -183,14 +183,14 @@
               </div>
               <div class="form-group">
                 <label>Civil Status</label>
-                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="civilStatus">
+                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="civilStatus" blockSpecialChar>
                 <small class="text-danger font-weight-bold ml-1" *ngIf="(registerCompleteFormGroup.get('civilStatus').invalid && registerCompleteFormGroup.get('civilStatus').dirty)">
                     Enter civil status
                 </small>
               </div>
               <div class="form-group">
                 <label>Nationality</label>
-                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="nationality">
+                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="nationality" blockSpecialChar>
                 <small class="text-danger font-weight-bold ml-1" *ngIf="(registerCompleteFormGroup.get('nationality').invalid && registerCompleteFormGroup.get('nationality').dirty)">
                     Enter nationality
                 </small>
@@ -245,15 +245,15 @@
                               <div class="row">
                                   <div class="form-group col-md-4 col-sm-12">
                                       <label>First Name</label>
-                                      <input type="text" class="form-control form-control-sm" placeholder="" formControlName="firstName">
+                                      <input type="text" class="form-control form-control-sm" placeholder="" formControlName="firstName" blockSpecialChar>
                                   </div>
                                   <div class="form-group col-md-4 col-sm-12">
                                       <label>Middle Name</label>
-                                      <input type="text" class="form-control form-control-sm" placeholder="" formControlName="middleName">
+                                      <input type="text" class="form-control form-control-sm" placeholder="" formControlName="middleName" blockSpecialChar>
                                   </div>
                                   <div class="form-group col-md-4 col-sm-12">
                                     <label>Last Name</label>
-                                    <input type="text" class="form-control form-control-sm" placeholder="" formControlName="lastName">
+                                    <input type="text" class="form-control form-control-sm" placeholder="" formControlName="lastName" blockSpecialChar>
                                   </div>
                               </div>
                               <div class="row">
@@ -263,7 +263,7 @@
                                   </div>
                                   <div class="form-group col-md-6 col-sm-12">
                                       <label>Place of Birth</label>
-                                      <input type="text" class="form-control form-control-sm" placeholder="" formControlName="placeOfBirth">
+                                      <input type="text" class="form-control form-control-sm" placeholder="" formControlName="placeOfBirth" blockSpecialChar>
                                   </div>
                               </div>
                               <div class="form-group">
@@ -289,11 +289,11 @@
                               <div class="row">
                                   <div class="form-group col-md-6 col-sm-12">
                                       <label>Civil Status</label>
-                                      <input type="text" class="form-control form-control-sm" placeholder="" formControlName="civilStatus">
+                                      <input type="text" class="form-control form-control-sm" placeholder="" formControlName="civilStatus" blockSpecialChar>
                                   </div>
                                   <div class="form-group col-md-6 col-sm-12">
                                       <label>Nationality</label>
-                                      <input type="number" class="form-control form-control-sm" placeholder="" formControlName="nationality">
+                                      <input type="text" class="form-control form-control-sm" placeholder="" formControlName="nationality" blockSpecialChar>
                                   </div>
                               </div>
                               <div class="form-group">
