--- a/src/app/views/new-page/new-page.component.html
+++ b/src/app/views/new-page/new-page.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="form-group">
                     <label>Image</label>
-                    <input type="file" class="form-control" formControlName="image">
+                    <input type="file" class="form-control" (change)="onFileChange($event)">
                 </div>
                 <div class="form-group">
                     <label>Description</label>
