--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -26,21 +26,30 @@
             <div class="form-group">
               <label>Email address</label>
               <input type="email" class="form-control" placeholder="" formControlName="email">
-              <!-- <small class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+              <small class="text-danger" *ngIf="registerFormGroup.controls['email'].dirty && registerFormGroup.controls['email'].errors?.required">Enter email address</small>
+              <small class="text-danger" *ngIf="registerFormGroup.controls['email'].dirty && registerFormGroup.controls['email'].errors?.email">Enter a valid email address</small>
             </div>
             <div *ngIf="isSeller" class="form-group">
               <label>Code</label>
               <input class="form-control" type="text" formControlName="code">
+              <small class="text-danger" *ngIf="registerFormGroup.controls['code'].errors?.isUsed">Enter a valid code</small>
             </div>
             <div class="form-group" formGroupName="passwords">
-              <label>Create password</label>
-              <input class="form-control" type="password" id="password" formControlName="password" maxlength="10">
-              <label>Re-enter password</label>
-              <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
+              <div>
+                  <label>Create password</label>
+                  <input class="form-control" type="password" id="password" formControlName="password" maxlength="10">
+                  <small class="text-danger" *ngIf="registerFormGroup.controls['passwords'].controls.password.dirty && registerFormGroup.controls['passwords'].controls.password.errors?.required">Enter a password</small>
+              </div>
+              <div class="pt-3">
+                  <label>Re-enter password</label>
+                  <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
+                  <small class="text-danger" *ngIf="registerFormGroup.controls['passwords'].controls.confirm_password.dirty && registerFormGroup.controls['passwords'].errors?.invalid">Password does not match</small>
+              </div>
             </div>
             <div *ngIf="isSeller" class="form-group">
               <label>Upline/Referrer Code</label>
               <input class="form-control" formControlName="referrerCode">
+              <small class="text-danger" *ngIf="registerFormGroup.controls['referrerCode'].errors?.referrerCodeLimit">Enter valid referrer code</small>
             </div>
             <div class="form-group text-center">
               <h4>Register as</h4>
